--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 
   <!-- Seu script como módulo (permite importar supabase-js v2) -->
   <script type="module" src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </body>
 </html>
+
