--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8">
   <title>Mapa Tijucal - Ruas Interativas</title>
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css"/>
@@ -12,10 +11,10 @@
   <div id="map"></div>
 
   <div id="controls">
-    <button id="btnFeita">✅ Marcar como Feita</button>
-    <button id="btnFazer">❌ Marcar como A Fazer</button>
-    <button id="btnLimpar">🧹 Limpar Seleção</button>
-    <button id="btnSalvar">💾 Salvar Progresso</button>
+    <button onclick="marcarFeita()">✅ Marcar como Feita</button>
+    <button onclick="marcarFazer()">❌ Marcar como A Fazer</button>
+    <button onclick="limparSelecao()">🧹 Limpar Seleção</button>
+    <button onclick="salvarProgresso()">💾 Salvar Progresso</button>
   </div>
 
   <div id="legend">
@@ -25,13 +24,15 @@
     <p><span style="background: blue;"></span> Rua Selecionada</p>
   </div>
 
-  <!-- libs -->
+  <!-- Leaflet -->
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js"></script>
 
-  <!-- Seu script como módulo (permite importar supabase-js v2) -->
-  <script type="module" src="script.js"></script>
+  <!-- Supabase -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
+  <!-- Nosso código -->
+  <script src="script.js"></script>
 </body>
 </html>
 
